# OCR_for_chinese

./: README.md  research_on_ocr_models_for_the_chinese_language.ipynb
src/: Dockerfile  engine.py  pyproject.toml  requirements.txt
src/test/: test.py
